ingress/ingress_tls.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-discovery
spec:
  ports:
    - port: 8080
      targetPort: 8081
  selector:
    app: kube
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ditch
spec:
  tls:
  - hosts:
    - ditch.example.com
    secretName: tls-secret
  rules:
    - host: ditch.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: svc-discovery
            servicePort: 8080
